--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "serverless-webpack": "^5.13.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.9"
   }
 }
